Added Chamath to Authors list.

--- a/gtk/im/AUTHORS
+++ b/gtk/im/AUTHORS
@@ -1,4 +1,8 @@
-Anuradha Ratnaweera
-Virtusa Corporation
-anuradha at gnu org
+- Anuradha Ratnaweera
+  Virtusa Corporation
+  anuradha at gnu org
+
+- Chamath Keppitiyagama
+  University of British Columbia
+  chamath at cs ubc ca
 
