--- a/gtk/im/ChangeLog
+++ b/gtk/im/ChangeLog
@@ -1,3 +1,10 @@
+Version 0.2
+-----------
+- Use the word `Transliterated' instead of `phonetic'.
+- <F12> to change the language
+- Hal kireema is added only if there is a consonent before,
+  Bud found the bug (or is it `Bug found the Bud'? ;-))
+
 Version 0.1
 -----------
 - Initial `packaged' release
