--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 Anuradha Ratnaweera, Virtusa Corporation (anuradha at gnu org)
 Chamath Keppitiyagama, University of British Columbia (chamath at cs ubc ca)
 Harsha Senanayaka, John Keells Holdings (harsha.sgit at keells com)
-Harshula (hash at jayasolutions cjb net)
+Harshula Jayasuriya (hash at jayasolutions cjb net)
