Many changes to list.

--- a/scim/trans/AUTHORS
+++ b/scim/trans/AUTHORS
@@ -1,3 +1,8 @@
-Kazuki Ohta <mover@hct.zaq.ne.jp>
-Takuro Ashie <ashie@homa.ne.jp>
-Hiroyuki Ikezoe <poincare@ikezoe.net>
+SCIM module:
+* Kazuki Ohta <mover@hct.zaq.ne.jp>
+* Takuro Ashie <ashie@homa.ne.jp>
+* Hiroyuki Ikezoe <poincare@ikezoe.net>
+
+Original GTK module, and present maintainer:
+* Anuradha Ratnaweera <anuradha@taprobane.org>
+
