--- a/fonts/debian/changelog
+++ b/fonts/debian/changelog
@@ -1,3 +1,9 @@
+sinhala-font-lklug (0.4.0-2) unstable; urgency=low
+
+  * Make the DEB defoma aware
+
+ -- Anuradha Ratnaweera <anuradha@taprobane.org>  Tue, 07 Feb 2006 20:00:00 +0600
+
 sinhala-font-lklug (0.4.0-1) unstable; urgency=low
 
   * Initial release
