--- a/fonts/debian/changelog
+++ b/fonts/debian/changelog
@@ -1,3 +1,9 @@
+sinhala-font-lklug (0.4.1-1) unstable; urgency=low
+
+  * Create and add the "Kunddaliya" glyph
+
+ -- Harshula Jayasuriya <harshula@gmail.com>  Wed, 16 Aug 2006 02:52:20 +0530
+
 sinhala-font-lklug (0.4.0-2) unstable; urgency=low
 
   * Make the DEB defoma aware
