--- a/debian/debian/changelog
+++ b/debian/debian/changelog
@@ -1,3 +1,9 @@
+sinhala-gnu-linux (0.4.1-1) unstable; urgency=low
+
+  * Update control, postinst and  postrm
+
+ -- Harshula Jayasuriya <harshula@gmail.com>  Wed, 16 Aug 2006 02:52:20 +0530
+
 sinhala-gnu-linux (0.4.0-2) unstable; urgency=low
 
   * Glibc locales (>= 2.3.6) includes si_LK
