--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
-Anuradha Ratnaweera, Virtusa Corporation (anuradha at gnu org)
-Chamath Keppitiyagama, University of British Columbia (chamath at cs ubc ca)
-Harsha Senanayaka, John Keells Holdings (harsha.sgit at keells com)
-Harshula Jayasuriya (harshula at gmail com)
+Anuradha Ratnaweera, Virtusa Corporation (anuradha at gnu dot org)
+Chamath Keppitiyagama (chamathk at gmail dot com)
+Dushara Jayasinghe (nidujay at gmail dot com)
+Harsha Senanayaka, John Keells Holdings (harsha.sgit at keells dot com)
+Harshula Jayasuriya (harshula at gmail dot com)
