* Spell Harsha's surname correctly

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 Anuradha Ratnaweera, Virtusa Corporation (anuradha at gnu dot org)
 Chamath Keppitiyagama (chamathk at gmail dot com)
 Dushara Jayasinghe (nidujay at gmail dot com)
-Harsha Senanayaka, John Keells Holdings (harsha.sgit at keells dot com)
+Harsha Senanayake, John Keells Holdings (harsha.sgit at keells dot com)
 Harshula Jayasuriya (harshula at gmail dot com)
