--- a/scim/wijesekera/ChangeLog
+++ b/scim/wijesekera/ChangeLog
@@ -1,6 +1,7 @@
-2006-08-15  gettextize  <bug-gnu-gettext@gnu.org>
+2008-04-17  gettextize  <bug-gnu-gettext@gnu.org>
 
-	* Makefile.am (SUBDIRS): Add intl, po, m4.
-	(EXTRA_DIST): Add config.rpath, mkinstalldirs.
-	* configure.ac (AC_CONFIG_FILES): Add intl/Makefile, po/Makefile.in, m4/Makefile.
+	* Makefile.am (SUBDIRS): Add intl, po.
+	(ACLOCAL_AMFLAGS): New variable.
+	(EXTRA_DIST): New variable.
+	* configure.ac (AC_CONFIG_FILES): Add intl/Makefile, po/Makefile.in.
 
