--- a/scim/wijesekera/m4/ChangeLog
+++ b/scim/wijesekera/m4/ChangeLog
@@ -1,33 +1,33 @@
-2006-08-15  gettextize  <bug-gnu-gettext@gnu.org>
+2008-04-17  gettextize  <bug-gnu-gettext@gnu.org>
 
-	* codeset.m4: New file, from gettext-0.14.5.
-	* gettext.m4: New file, from gettext-0.14.5.
-	* glibc2.m4: New file, from gettext-0.14.5.
-	* glibc21.m4: New file, from gettext-0.14.5.
-	* iconv.m4: New file, from gettext-0.14.5.
-	* intdiv0.m4: New file, from gettext-0.14.5.
-	* intmax.m4: New file, from gettext-0.14.5.
-	* inttypes.m4: New file, from gettext-0.14.5.
-	* inttypes_h.m4: New file, from gettext-0.14.5.
-	* inttypes-pri.m4: New file, from gettext-0.14.5.
-	* isc-posix.m4: New file, from gettext-0.14.5.
-	* lcmessage.m4: New file, from gettext-0.14.5.
-	* lib-ld.m4: New file, from gettext-0.14.5.
-	* lib-link.m4: New file, from gettext-0.14.5.
-	* lib-prefix.m4: New file, from gettext-0.14.5.
-	* longdouble.m4: New file, from gettext-0.14.5.
-	* longlong.m4: New file, from gettext-0.14.5.
-	* nls.m4: New file, from gettext-0.14.5.
-	* po.m4: New file, from gettext-0.14.5.
-	* printf-posix.m4: New file, from gettext-0.14.5.
-	* progtest.m4: New file, from gettext-0.14.5.
-	* signed.m4: New file, from gettext-0.14.5.
-	* size_max.m4: New file, from gettext-0.14.5.
-	* stdint_h.m4: New file, from gettext-0.14.5.
-	* uintmax_t.m4: New file, from gettext-0.14.5.
-	* ulonglong.m4: New file, from gettext-0.14.5.
-	* wchar_t.m4: New file, from gettext-0.14.5.
-	* wint_t.m4: New file, from gettext-0.14.5.
-	* xsize.m4: New file, from gettext-0.14.5.
-	* Makefile.am: New file.
+	* gettext.m4: New file, from gettext-0.16.1.
+	* iconv.m4: New file, from gettext-0.16.1.
+	* lib-ld.m4: New file, from gettext-0.16.1.
+	* lib-link.m4: New file, from gettext-0.16.1.
+	* lib-prefix.m4: New file, from gettext-0.16.1.
+	* nls.m4: New file, from gettext-0.16.1.
+	* po.m4: New file, from gettext-0.16.1.
+	* progtest.m4: New file, from gettext-0.16.1.
+	* codeset.m4: New file, from gettext-0.16.1.
+	* glibc2.m4: New file, from gettext-0.16.1.
+	* glibc21.m4: New file, from gettext-0.16.1.
+	* intdiv0.m4: New file, from gettext-0.16.1.
+	* intl.m4: New file, from gettext-0.16.1.
+	* intldir.m4: New file, from gettext-0.16.1.
+	* intmax.m4: New file, from gettext-0.16.1.
+	* inttypes_h.m4: New file, from gettext-0.16.1.
+	* inttypes-pri.m4: New file, from gettext-0.16.1.
+	* lcmessage.m4: New file, from gettext-0.16.1.
+	* lock.m4: New file, from gettext-0.16.1.
+	* longdouble.m4: New file, from gettext-0.16.1.
+	* longlong.m4: New file, from gettext-0.16.1.
+	* printf-posix.m4: New file, from gettext-0.16.1.
+	* size_max.m4: New file, from gettext-0.16.1.
+	* stdint_h.m4: New file, from gettext-0.16.1.
+	* uintmax_t.m4: New file, from gettext-0.16.1.
+	* ulonglong.m4: New file, from gettext-0.16.1.
+	* visibility.m4: New file, from gettext-0.16.1.
+	* wchar_t.m4: New file, from gettext-0.16.1.
+	* wint_t.m4: New file, from gettext-0.16.1.
+	* xsize.m4: New file, from gettext-0.16.1.
 
