--- a/scim/wijesekera/po/si.po
+++ b/scim/wijesekera/po/si.po
@@ -1,27 +1,26 @@
-# English translations for scim-imengine-wijesekera package.
-# This file is put in the public domain.
-# Dushara Jayasinghe <dushara@localhost.localdomain>, 2006.
-#
+# translation of scim-skk to Sinhala
+# Copyright (C) 2008 Dushara Jayasinghe
+# This file is distributed under the same license as the scim-wijesekera package.
+# Dushara Jayasinghe <nidujay *killspam* gmail.com>, 2008.
 msgid ""
 msgstr ""
-"Project-Id-Version: scim-imengine-wijesekera 0.2.2\n"
-"Report-Msgid-Bugs-To: nidujay *killspam* gmail dot com\n"
-"POT-Creation-Date: 2006-08-15 08:09+1000\n"
-"PO-Revision-Date: 2006-08-15 08:09+1000\n"
-"Last-Translator: Dushara Jayasinghe <dushara@localhost.localdomain>\n"
-"Language-Team: English <en@translate.freefriends.org>\n"
+"Project-Id-Version: scim-wijesekera\n"
+"Report-Msgid-Bugs-To: nidujay *nospam* gmail.com\n"
+"POT-Creation-Date: 2008-04-18 08:25+1000\n"
+"PO-Revision-Date: 2008-04-17 08:28+1000\n"
+"Last-Translator: Dushara Jayasinghe <nidujay *killspam* gmail.com>\n"
+"Language-Team: Sinhala\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: src/scim_wijesekera_imengine_setup.cpp:83
 msgid "Wijesekera"
-msgstr "Wijesekera"
+msgstr "විජේසේකර"
 
 #: src/scim_wijesekera_imengine_setup.cpp:88
 msgid "Wijesekera IMEngine Module."
-msgstr "Wijesekera IMEngine Module."
+msgstr "විජේසේකර IMEngine Module."
 
 #: src/scim_wijesekera_imengine_setup.cpp:191
 msgid "Common keys"
