--- a/scim/sayura/ChangeLog
+++ b/scim/sayura/ChangeLog
@@ -1,3 +1,11 @@
+2008-05-25 Anuradha Ratnaweera <anuradha@taprobane.org>
+	* One page PDF reference brochure.
+
+2008-05-24 Anuradha Ratnaweera <anuradha@taprobane.org>
+	* Use f also for mahaprana conversion.
+	* V for ilu and iluu.
+	* PDF brochure.
+
 2008-05-23 Anuradha Ratnaweera <anuradha@taprobane.org>
 
 	* Show preedit after updating to make KDE happy.
