Properly commit preedits with ang and ah.

--- a/scim/sayura/ChangeLog
+++ b/scim/sayura/ChangeLog
@@ -1,5 +1,6 @@
 2008-05-25 Anuradha Ratnaweera <anuradha@taprobane.org>
 	* One page PDF reference brochure.
+	* Properly commit preedits with ang and ah.
 
 2008-05-24 Anuradha Ratnaweera <anuradha@taprobane.org>
 	* Use f also for mahaprana conversion.
