--- a/scim/sayura/debian/changelog
+++ b/scim/sayura/debian/changelog
@@ -1,9 +1,10 @@
 scim-sayura (0.3.2-1) unstable; urgency=low
 
-  * Use f also for mahaprana conversion.
-  * V for ilu and iluu.
-  * PDF brochure.
-  * One page PDF reference brochure.
+  * Use f also for mahaprana conversion
+  * V for ilu and iluu
+  * PDF brochure
+  * One page PDF reference brochure
+  * Properly commit preedits with ang and ah
 
  -- Anuradha Ratnaweera <anuradha@taprobane.org>  Mon, 25 May 2008 12:00:00 +0530
 
