--- a/scim/sayura/ChangeLog
+++ b/scim/sayura/ChangeLog
@@ -2,6 +2,7 @@
 	* One page PDF reference brochure.
 	* Properly commit preedits with ang and ah.
 	* Autogen fails on error.
+	* Version 0.3.2
 
 2008-05-24 Anuradha Ratnaweera <anuradha@taprobane.org>
 	* Use f also for mahaprana conversion.
