--- a/scim/sayura/NEWS
+++ b/scim/sayura/NEWS
@@ -1,5 +1,9 @@
 Overview of Changes from scim-sinhala-0.3.1 to scim-sinhala-0.3.2
 =================================================================
+* RPM packaging.
+
+Overview of Changes from scim-sinhala-0.3.1 to scim-sinhala-0.3.2
+=================================================================
 * Can use f also for mahaprana conversion.
 * Use V for ilu and iluu.
 * Documentation and brochure.
