--- a/scim/sayura/doc/sayura.tex
+++ b/scim/sayura/doc/sayura.tex
@@ -3,7 +3,7 @@
 \setlength{\parindent}{0in}
 \begin{document}
 
-\section*{සයුර සිංහළ යතුරුලියන සැටිය}
+\section*{සයුර සිංහළ යතුරුලියන සුසැටිය}
 \subsection*{පණකුරු}
 
 \begin{tabular}{|lr|lr|lr|lr|lr|lr|}
@@ -57,6 +57,8 @@
 අල් කිරීම W ලෙස යෙදීමෙන් බැඳි අකුරු ලැබේ.
 
 උදාහරණ: kWsH - ක්‍ෂ, nWd - න්‍ද, nWdu - න්‍දු, inWdRiy - ඉන්‍ද්‍රිය
+
+\medskip
 
 රකාරංසය: R, යංසය: Y
 
