--- a/scim/sayura/doc/sayura.tex
+++ b/scim/sayura/doc/sayura.tex
@@ -56,7 +56,7 @@
 
 අල් කිරීම W ලෙස යෙදීමෙන් බැඳි අකුරු ලැබේ.
 
-උදාහරණ: kWsH - ක්‍ෂ, nWd - න්‍ද, nWdu - න්‍දු, inWdRiy - ඉන්‍ද්‍රිය
+උදාහරණ: kWsH - ක්‍ෂ, nWd - න්‍ද, nWdu - න්‍දු, inWdRiy - ඉන්‍ද්‍රිය, rWk - ර්‍ක
 
 \medskip
 
