--- a/scim/sayura/NEWS
+++ b/scim/sayura/NEWS
@@ -1,6 +1,7 @@
-Overview of Changes from scim-sinhala-0.3.1 to scim-sinhala-0.3.2
+Overview of Changes from scim-sinhala-0.3.2 to scim-sinhala-0.3.3
 =================================================================
 * RPM packaging.
+* Better behaviour of w, W, R and Y.
 
 Overview of Changes from scim-sinhala-0.3.1 to scim-sinhala-0.3.2
 =================================================================
