--- a/scim/sayura/debian/changelog
+++ b/scim/sayura/debian/changelog
@@ -4,8 +4,9 @@ scim-sayura (0.3.3-1) unstable; urgency=low
   * Intuitive behaviour of al kireema after vowels and modifiers
   * Allow typing rakaransaya or yansaya after a modifier
   * Validate w, W, R and Y when possible
+  * Efficiency improvements and code cleanup
 
- -- Anuradha Ratnaweera <anuradha@taprobane.org>  Mon, 26 May 2008 12:00:00 +0530
+ -- Anuradha Ratnaweera <anuradha@taprobane.org>  Mon, 28 May 2008 12:00:00 +0530
 
 scim-sayura (0.3.2-1) unstable; urgency=low
 
