--- a/fonts/debian/changelog
+++ b/fonts/debian/changelog
@@ -3,9 +3,9 @@ ttf-sinhala-lklug (0.5.0-1) unstable; urgency=low
   * Pakage renamed to ttf-sinhala-lklug
   * Script to convert from SFD to TTF based on ttf-freefont
   * Makefile based build
-  * Install directory set to truetype/ttf-sinhala
+  * Defoma hints
 
- -- Anuradha Ratnaweera <anuradha@taprobane.org>  Wed, 28 May 2008 12:00:00 +0530
+ -- Anuradha Ratnaweera <anuradha@taprobane.org>  Wed, 29 May 2008 12:00:00 +0530
 
 sinhala-font-lklug (0.4.2-1) unstable; urgency=low
 
