--- a/fonts/debian/changelog
+++ b/fonts/debian/changelog
@@ -1,3 +1,10 @@
+ttf-sinhala-lklug (0.5.4-1) unstable; urgency=low
+
+  * Proper copyright/license information in TTF names (NIIBE Yutaka)
+  * Build depends on Debhelper >= 5 (NIIBE Yutaka)
+
+ -- Anuradha Ratnaweera <anuradha@taprobane.org>  Thu, 05 Jun 2008 12:00:00 +0530
+
 ttf-sinhala-lklug (0.5.3-1) unstable; urgency=low
 
   * Closes: #483630 (Debian ITP)
