--- a/debian/debian/changelog
+++ b/debian/debian/changelog
@@ -1,3 +1,9 @@
+sinhala-gnu-linux (0.4.2-4) unstable; urgency=low
+
+  * Ubuntu: Remove m17n-contrib from 'Recommends', add it to 'Depends'.
+
+ -- Harshula Jayasuriya <harshula@gmail.com>  Fri, 09 Jan 2009 17:21:49 +1100
+
 sinhala-gnu-linux (0.4.2-3) unstable; urgency=low
 
   * Debian: Add m17n-contrib to 'Depends'.
